omnibus_exp/graphql/_antlr/GraphqlParser.py
# flake8: noqa
# type: ignore
# Generated from Graphql.g4 by ANTLR 4.8
# encoding: utf-8
from ..._vendor.antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class GraphqlParser ( Parser ):

    grammarFileName = "Graphql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "')'", "':'", "'...'", 
                     "'['", "']'", "'$'", "'='", "'!'", "'@'", "'&'", "'|'", 
                     "'ARGUMENT_DEFINITION'", "'directive'", "'ENUM'", "'enum'", 
                     "'ENUM_VALUE'", "'extend'", "'extends'", "'false'", 
                     "'FIELD'", "'FIELD_DEFINITION'", "'fragment'", "'FRAGMENT_DEFINITION'", 
                     "'FRAGMENT_SPREAD'", "'implements'", "'INLINE_FRAGMENT'", 
                     "'input'", "'INPUT_FIELD_DEFINITION'", "'INPUT_OBJECT'", 
                     "'INTERFACE'", "'interface'", "'MUTATION'", "'mutation'", 
                     "'null'", "'OBJECT'", "'on'", "'QUERY'", "'query'", 
                     "'SCALAR'", "'scalar'", "'SCHEMA'", "'schema'", "'SUBSCRIPTION'", 
                     "'subscription'", "'true'", "'type'", "'UNION'", "'union'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "','", "<INVALID>", "<INVALID>", "'\uEFBBBF'", "'\uFEFF'", 
                     "'\u0000FEFF'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ARGUMENT_DEFINITION", 
                      "DIRECTIVE_", "ENUM", "ENUM_", "ENUM_VALUE", "EXTEND_", 
                      "EXTENDS_", "FALSE_", "FIELD", "FIELD_DEFINITION", 
                      "FRAGMENT_", "FRAGMENT_DEFINITION", "FRAGMENT_SPREAD", 
                      "IMPLEMENTS_", "INLINE_FRAGMENT", "INPUT_", "INPUT_FIELD_DEFINITION", 
                      "INPUT_OBJECT", "INTERFACE", "INTERFACE_", "MUTATION", 
                      "MUTATION_", "NULL_", "OBJECT", "ON_", "QUERY", "QUERY_", 
                      "SCALAR", "SCALAR_", "SCHEMA", "SCHEMA_", "SUBSCRIPTION", 
                      "SUBSCRIPTION_", "TRUE_", "TYPE_", "UNION", "UNION_", 
                      "NAME", "STRING", "BLOCK_STRING", "ID", "FLOAT", "INT", 
                      "PUNCTUATOR", "WS", "COMMA", "LineComment", "UNICODE_BOM", 
                      "UTF8_BOM", "UTF16_BOM", "UTF32_BOM" ]

    RULE_document = 0
    RULE_definition = 1
    RULE_executableDefinition = 2
    RULE_operationDefinition = 3
    RULE_operationType = 4
    RULE_selectionSet = 5
    RULE_selection = 6
    RULE_field = 7
    RULE_arguments = 8
    RULE_argument = 9
    RULE_alias = 10
    RULE_fragmentSpread = 11
    RULE_fragmentDefinition = 12
    RULE_fragmentName = 13
    RULE_typeCondition = 14
    RULE_inlineFragment = 15
    RULE_value = 16
    RULE_intValue = 17
    RULE_floatValue = 18
    RULE_booleanValue = 19
    RULE_stringValue = 20
    RULE_nullValue = 21
    RULE_enumValue = 22
    RULE_listValue = 23
    RULE_objectValue = 24
    RULE_objectField = 25
    RULE_variable = 26
    RULE_variableDefinitions = 27
    RULE_variableDefinition = 28
    RULE_defaultValue = 29
    RULE_type_ = 30
    RULE_namedType = 31
    RULE_listType = 32
    RULE_directives = 33
    RULE_directive = 34
    RULE_typeSystemDefinition = 35
    RULE_typeSystemExtension = 36
    RULE_schemaDefinition = 37
    RULE_rootOperationTypeDefinition = 38
    RULE_schemaExtension = 39
    RULE_operationTypeDefinition = 40
    RULE_description = 41
    RULE_typeDefinition = 42
    RULE_typeExtension = 43
    RULE_scalarTypeDefinition = 44
    RULE_scalarTypeExtension = 45
    RULE_objectTypeDefinition = 46
    RULE_implementsInterfaces = 47
    RULE_fieldsDefinition = 48
    RULE_fieldDefinition = 49
    RULE_argumentsDefinition = 50
    RULE_inputValueDefinition = 51
    RULE_objectTypeExtension = 52
    RULE_interfaceTypeDefinition = 53
    RULE_interfaceTypeExtension = 54
    RULE_unionTypeDefinition = 55
    RULE_unionMemberTypes = 56
    RULE_unionTypeExtension = 57
    RULE_enumTypeDefinition = 58
    RULE_enumValuesDefinition = 59
    RULE_enumValueDefinition = 60
    RULE_enumTypeExtension = 61
    RULE_inputObjectTypeDefinition = 62
    RULE_inputFieldsDefinition = 63
    RULE_inputObjectTypeExtension = 64
    RULE_directiveDefinition = 65
    RULE_directiveLocations = 66
    RULE_directiveLocation = 67
    RULE_executableDirectiveLocation = 68
    RULE_typeSystemDirectiveLocation = 69
    RULE_name = 70

    ruleNames =  [ "document", "definition", "executableDefinition", "operationDefinition", 
                   "operationType", "selectionSet", "selection", "field", 
                   "arguments", "argument", "alias", "fragmentSpread", "fragmentDefinition", 
                   "fragmentName", "typeCondition", "inlineFragment", "value", 
                   "intValue", "floatValue", "booleanValue", "stringValue", 
                   "nullValue", "enumValue", "listValue", "objectValue", 
                   "objectField", "variable", "variableDefinitions", "variableDefinition", 
                   "defaultValue", "type_", "namedType", "listType", "directives", 
                   "directive", "typeSystemDefinition", "typeSystemExtension", 
                   "schemaDefinition", "rootOperationTypeDefinition", "schemaExtension", 
                   "operationTypeDefinition", "description", "typeDefinition", 
                   "typeExtension", "scalarTypeDefinition", "scalarTypeExtension", 
                   "objectTypeDefinition", "implementsInterfaces", "fieldsDefinition", 
                   "fieldDefinition", "argumentsDefinition", "inputValueDefinition", 
                   "objectTypeExtension", "interfaceTypeDefinition", "interfaceTypeExtension", 
                   "unionTypeDefinition", "unionMemberTypes", "unionTypeExtension", 
                   "enumTypeDefinition", "enumValuesDefinition", "enumValueDefinition", 
                   "enumTypeExtension", "inputObjectTypeDefinition", "inputFieldsDefinition", 
                   "inputObjectTypeExtension", "directiveDefinition", "directiveLocations", 
                   "directiveLocation", "executableDirectiveLocation", "typeSystemDirectiveLocation", 
                   "name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    ARGUMENT_DEFINITION=15
    DIRECTIVE_=16
    ENUM=17
    ENUM_=18
    ENUM_VALUE=19
    EXTEND_=20
    EXTENDS_=21
    FALSE_=22
    FIELD=23
    FIELD_DEFINITION=24
    FRAGMENT_=25
    FRAGMENT_DEFINITION=26
    FRAGMENT_SPREAD=27
    IMPLEMENTS_=28
    INLINE_FRAGMENT=29
    INPUT_=30
    INPUT_FIELD_DEFINITION=31
    INPUT_OBJECT=32
    INTERFACE=33
    INTERFACE_=34
    MUTATION=35
    MUTATION_=36
    NULL_=37
    OBJECT=38
    ON_=39
    QUERY=40
    QUERY_=41
    SCALAR=42
    SCALAR_=43
    SCHEMA=44
    SCHEMA_=45
    SUBSCRIPTION=46
    SUBSCRIPTION_=47
    TRUE_=48
    TYPE_=49
    UNION=50
    UNION_=51
    NAME=52
    STRING=53
    BLOCK_STRING=54
    ID=55
    FLOAT=56
    INT=57
    PUNCTUATOR=58
    WS=59
    COMMA=60
    LineComment=61
    UNICODE_BOM=62
    UTF8_BOM=63
    UTF16_BOM=64
    UTF32_BOM=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphqlParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(GraphqlParser.DefinitionContext,i)


        def getRuleIndex(self):
            return GraphqlParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = GraphqlParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 142
                self.definition()
                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GraphqlParser.T__0) | (1 << GraphqlParser.DIRECTIVE_) | (1 << GraphqlParser.ENUM_) | (1 << GraphqlParser.EXTEND_) | (1 << GraphqlParser.EXTENDS_) | (1 << GraphqlParser.FRAGMENT_) | (1 << GraphqlParser.INPUT_) | (1 << GraphqlParser.INTERFACE_) | (1 << GraphqlParser.MUTATION_) | (1 << GraphqlParser.QUERY_) | (1 << GraphqlParser.SCALAR_) | (1 << GraphqlParser.SCHEMA_) | (1 << GraphqlParser.SUBSCRIPTION_) | (1 << GraphqlParser.TYPE_) | (1 << GraphqlParser.UNION_) | (1 << GraphqlParser.STRING) | (1 << GraphqlParser.BLOCK_STRING))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def executableDefinition(self):
            return self.getTypedRuleContext(GraphqlParser.ExecutableDefinitionContext,0)


        def typeSystemDefinition(self):
            return self.getTypedRuleContext(GraphqlParser.TypeSystemDefinitionContext,0)


        def typeSystemExtension(self):
            return self.getTypedRuleContext(GraphqlParser.TypeSystemExtensionContext,0)


        def getRuleIndex(self):
            return GraphqlParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = GraphqlParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphqlParser.T__0, GraphqlParser.FRAGMENT_, GraphqlParser.MUTATION_, GraphqlParser.QUERY_, GraphqlParser.SUBSCRIPTION_]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.executableDefinition()
                pass
            elif token in [GraphqlParser.DIRECTIVE_, GraphqlParser.ENUM_, GraphqlParser.INPUT_, GraphqlParser.INTERFACE_, GraphqlParser.SCALAR_, GraphqlParser.SCHEMA_, GraphqlParser.TYPE_, GraphqlParser.UNION_, GraphqlParser.STRING, GraphqlParser.BLOCK_STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.typeSystemDefinition()
                pass
            elif token in [GraphqlParser.EXTEND_, GraphqlParser.EXTENDS_]:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.typeSystemExtension()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExecutableDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operationDefinition(self):
            return self.getTypedRuleContext(GraphqlParser.OperationDefinitionContext,0)


        def fragmentDefinition(self):
            return self.getTypedRuleContext(GraphqlParser.FragmentDefinitionContext,0)


        def getRuleIndex(self):
            return GraphqlParser.RULE_executableDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExecutableDefinition" ):
                listener.enterExecutableDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExecutableDefinition" ):
                listener.exitExecutableDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExecutableDefinition" ):
                return visitor.visitExecutableDefinition(self)
            else:
                return visitor.visitChildren(self)




    def executableDefinition(self):

        localctx = GraphqlParser.ExecutableDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_executableDefinition)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphqlParser.T__0, GraphqlParser.MUTATION_, GraphqlParser.QUERY_, GraphqlParser.SUBSCRIPTION_]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.operationDefinition()
                pass
            elif token in [GraphqlParser.FRAGMENT_]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.fragmentDefinition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operationType(self):
            return self.getTypedRuleContext(GraphqlParser.OperationTypeContext,0)


        def selectionSet(self):
            return self.getTypedRuleContext(GraphqlParser.SelectionSetContext,0)


        def name(self):
            return self.getTypedRuleContext(GraphqlParser.NameContext,0)


        def variableDefinitions(self):
            return self.getTypedRuleContext(GraphqlParser.VariableDefinitionsContext,0)


        def directives(self):
            return self.getTypedRuleContext(GraphqlParser.DirectivesContext,0)


        def getRuleIndex(self):
            return GraphqlParser.RULE_operationDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperationDefinition" ):
                listener.enterOperationDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperationDefinition" ):
                listener.exitOperationDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperationDefinition" ):
                return visitor.visitOperationDefinition(self)
            else:
                return visitor.visitChildren(self)




    def operationDefinition(self):
